erDiagram
    members ||--o{ health_connections : ""
    health_connections ||--o{ health_activity_records : ""

    members {
        bigint id PK "회원 식별자"
        varchar(50) name "회원 이름"
        varchar(50) nickname "회원 닉네임"
        varchar(255) email UK "로그인 이메일. 소문자 정규화, 악센트 구분"
        varchar(100) password_hash "비밀번호 해시. 평문 저장 안 함"
        datetime created_at "생성 시각 (UTC)"
        datetime updated_at "수정 시각 (UTC)"
    }

    health_connections {
        bigint id PK "건강 데이터 연결 식별자"
        bigint member_id FK "연결을 소유한 회원"
        varchar(255) record_key UK "공급자가 전달한 사용자 구분 키(recordkey)"
        varchar(64) source_name "공급자 앱 이름"
        varchar(64) product_name "단말 제품명"
        varchar(64) vendor_name "제조사명"
        int source_mode "공급자 수집 모드 코드"
        datetime created_at "생성 시각 (UTC)"
        datetime updated_at "수정 시각 (UTC)"
    }

    health_activity_records {
        bigint id PK "건강활동 레코드 식별자"
        bigint connection_id FK "소속 연결"
        varchar(32) metric_type "지표 종류 (steps)"
        datetime period_start_utc "측정 구간 시작 시각 (UTC)"
        datetime period_end_utc "측정 구간 종료 시각 (UTC)"
        date activity_date "집계 기준 날짜 (Asia/Seoul)"
        decimal steps "걸음수 원본값"
        decimal calories "소모 칼로리 원본값"
        decimal distance "이동거리 원본값"
        varchar(16) calories_unit "칼로리 단위 (kcal)"
        varchar(16) distance_unit "거리 단위 (km)"
        datetime source_last_updated_at "공급자 최종 갱신 시각 (UTC)"
        char(64) payload_hash "측정값 변경 감지용 SHA-256 해시"
        datetime created_at "생성 시각 (UTC)"
        datetime updated_at "수정 시각 (UTC)"
    }
